syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.product";
option java_outer_classname = "ProductProto";

import "google/protobuf/empty.proto";

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (Product);
  rpc GetProduct (GetProductRequest) returns (Product);
  rpc GetAllProducts (google.protobuf.Empty) returns (stream Product);
  rpc UpdateProduct (UpdateProductRequest) returns (Product);
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  int32 stock = 3;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  double price = 3;
  int32 stock = 4;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  bool success = 1;
}